test/fail/basic_syntax/check_line_numbers.lly
#[
SyntaxError: Cannot assign type 'string' to type 'integer'.
    from check_line_numbers.lly:7
]#

var a = 10
a = "10"
